polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Hydrogen",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    [],
)
